--- a/css/42position.html
+++ b/css/42position.html
@@ -1,25 +1,53 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <style>
-        div{font-size:3em; text-align: center; border: 2px solid black; width:200px; height:70px;}
+        div {
+            font-size: 3em;
+            text-align: center;
+            border: 2px solid black;
+            width: 200px;
+            height: 70px;
+        }
 
-        #ex1{position:static;/* 기본값 */}
-        #ex2{position:relative;/* 기본 위치 기준 */ /* top, bottom, left, right 프로퍼티와함께사용 */
-        top:20px; /* 위에서부터 멀어지게 */
-        left:30px; /* 왼쪽에서 멀어지게 */}
+        #ex1 {
+            position: static;
+            /* 기본값 */
+        }
 
-        #ex3{position:fixed; /* viewport 기준 */
-        /* viewport : 브라우저의 출력 공간 */
-        /* 정상적인 배치 흐름에서 제외*/
-        top:20px; /* 위에서부터 멀어지게 */
-        left:50px; /* 왼쪽에서 멀어지게 */}
+        #ex2 {
+            position: relative;
+            /* 기본 위치 기준 */
+            /* top, bottom, left, right 프로퍼티와함께사용 */
+            top: 20px;
+            /* 위에서부터 멀어지게 */
+            left: 30px;
+            /* 왼쪽에서 멀어지게 */
+        }
 
-        #ex4{position: sticky; /* relative, fixed의 혼합 */
-        /* scroll 넘어가면 fixed */
-    /* scroll 안넘어가면 relative */ left:70px; top: 70px;}
+        #ex3 {
+            position: fixed;
+            /* viewport 기준 */
+            /* viewport : 브라우저의 출력 공간 */
+            /* 정상적인 배치 흐름에서 제외*/
+            top: 20px;
+            /* 위에서부터 멀어지게 */
+            left: 50px;
+            /* 왼쪽에서 멀어지게 */
+        }
+
+        #ex4 {
+            position: sticky;
+            /* relative, fixed의 혼합 */
+            /* scroll 넘어가면 fixed */
+            /* scroll 안넘어가면 relative */
+            left: 70px;
+            top: 70px;
+        }
     </style>
 </head>
+
 <body>
     <!-- #ex$*5{$} -->
     <div id="ex1">1</div>
@@ -130,4 +158,5 @@
     <hr>
 
 </body>
+
 </html>
