--- a/html/12attribute.html
+++ b/html/12attribute.html
@@ -12,6 +12,6 @@
 
     <img src="도쿄.jfif" width="200" height="200">
 <h3>베이징</h3>
-<img src="베이징.jfif">
+<img src="베이징.jfif" width="400" height="300">
 </body>
 </html>
