--- a/html/15style.html
+++ b/html/15style.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head></head>
-<body style="background-color:crimson;">
+<body style="background-color:skyblue;">
     
 
  <h1 title="제목" style="color:blue;">Lorem, ipsum dolor.</h1>
