--- a/html/16style.html
+++ b/html/16style.html
@@ -3,7 +3,7 @@
 <head></head>
 <body>
     
-    <h1 style="text-align:center;">Lorem ipsum dolor sit amet.</h1>
+    <h1 style="text-align:center; color:blue;">Lorem ipsum dolor sit amet.</h1>
     <h1 style="text-align:left;">Dolore rerum numquam odio iusto.</h1>
     <h1 style="text-align:right;">Deleniti sequi consequatur nesciunt tempore?</h1>
 
