--- a/html/17color.html
+++ b/html/17color.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <h1 style="color:azure">컬러이름</h1>
+    <h1 style="color:rgb(44, 119, 119)">컬러이름</h1>
     <h1 style="color:aqua">컬러이름</h1>
 
     <hr>
