--- a/css/03text.html
+++ b/css/03text.html
@@ -3,10 +3,10 @@
 <head>
 </head>
 <body>
-    <h1 style="text-decoration: none;">Lorem ipsum dolor sit amet.</h1>
+    <h1 style="text-decoration:none;">Lorem ipsum dolor sit amet.</h1>
     <h1 style="text-decoration: line-through">Aliquam commodi excepturi ab dolorem.</h1>
     <h1 style="text-decoration: underline">Sapiente repellendus provident corporis maxime?</h1>
     <h1 style="text-decoration: underline dotted;">Labore ratione ab voluptatibus tenetur!</h1>
-    <h1 style="text-decoration: line-through double;">Molestias, quisquam? Voluptatum, reiciendis rerum?</h1>
+    <h1 style="text-decoration: underline double;">Molestias, quisquam? Voluptatum, reiciendis rerum?</h1>
 </body>
 </html>
