--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 <p>bootstrap grid 연습 <a href="https://suno0140.github.io/wep220207/css/67bootstrap-grid.html">
                     <i class="fa-solid fa-link"></i>
                 </a></p>
+
+                <p>js연습 <a href="https://suno0140.github.io/wep220207/js/01js.html"><i class="fa-solid fa-link"></i></a></p>
             </div>
         </div>
     </div>
