--- a/js/06document.html
+++ b/js/06document.html
@@ -9,12 +9,22 @@
     </style>
 </head>
 <body>
-    <!-- h1#head$.note*3>lorem2^h1#h1#head$@4.error*2>lorem2 -->
-    <h1 id="head1" class="note">Lorem, ipsum.</h1>
-    <h1 id="head2" class="note">Temporibus, ad!</h1>
-    <h1 id="head3" class="note">Quisquam, sequi.</h1>
-    <h1 id="head4" class="error">Lorem, ipsum.</h1>
-    <h1 id="head5" class="error">Accusamus, atque.</h1>
+    <!-- h1#head$.note*3>lorem2^h1#head$@4.error*2>lorem2 -->
+    <h1 id="head1" class="note">
+        Lorem, ipsum.
+    </h1>
+    <h1 id="head2" class="note">
+        Eos, quam.
+    </h1>
+    <h1 id="head3" class="note">
+        Atque, deleniti!
+    </h1>
+    <h1 id="head4" class="error">
+        Lorem, ipsum.
+    </h1>
+    <h1 id="head5" class="error">
+        Ratione, aut!
+    </h1>
 
     <script>
         console.log("클래스이름으로 요소 가져오기");
@@ -23,15 +33,15 @@
         console.log(document.getElementsByClassName("error"));
 
         console.log("클래스로 얻어온 요소 중 특정 요소 가져오기");
-        
-        console.log(document.getElementsByClassName("note")[0])
-        console.log(document.getElementsByClassName("note")[1])
-        console.log(document.getElementsByClassName("note")[2])
+        console.log(document.getElementsByClassName("note")[0]);
+        console.log(document.getElementsByClassName("note")[1]);
+        console.log(document.getElementsByClassName("note")[2]);
 
-        console.log(document.getElementsByClassName("error")[0])
-        console.log(document.getElementsByClassName("error")[1])
+        console.log(document.getElementsByClassName("error")[0]);
+        console.log(document.getElementsByClassName("error")[1]);
 
     </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
