--- a/js/66function.html
+++ b/js/66function.html
@@ -35,6 +35,8 @@
         let e = function(x){
             return x * 2;
         }
+        console.log(e(100));
+
         let f = e(100);
         console.log(f);
 
