--- a/js/64function.html
+++ b/js/64function.html
@@ -27,6 +27,9 @@
 
         afunc();
         bfunc();
+        cfunc(3);
+        dfunc(4);
+        let a = 5;
         console.log(a);
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
