--- a/js/76dom.html
+++ b/js/76dom.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- input*2#input$ -->
-    <input type="" id="input1">
+    <input type="text" id="input1">
     <input type="text" id="input2">
 
     <script>
