--- a/jquery/19event.ready.html
+++ b/jquery/19event.ready.html
@@ -10,40 +10,30 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css"
         integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <style>
     </style>
+    <script>
+        $(function () {
+            // console.log("dom 완료");
+            // console.log(document.querySelector("h1"));
+            $("h1").click(function () {
+                console.log("click");
+            })
+        });
+    </script>
 </head>
 
 <body>
-    <script>
-        let x = 2;
 
-        switch (x) {
-            case 1:
-                console.log("x는 1이다.");
-            //break;
-            case 2:
-                console.log("x는 2이다.");
-            //break;
-            default:
-                console.log("모든 케이스문과 일치하지 않음");
-            //break;
-        }
+    <!-- h1>lorem1 -->
+    <h1>
+        Lorem.
+    </h1>
 
-        let s = "a"; 
 
-        switch (s) {
-            case "a":
-            case "A":
-                console.log("A 입니다.");
-                //break;
-            case "b":
-            case "B":
-                console.log("B 입니다.");
-                break; // 마지막 break 는 생략 가능
-        }
-
-    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
